--- a/Sharp.Diagnostics.Logging/Sharp.Diagnostics.Logging.csproj
+++ b/Sharp.Diagnostics.Logging/Sharp.Diagnostics.Logging.csproj
@@ -25,4 +25,19 @@
     <GeneratePackageOnBuild>$(VersionIsTagged)</GeneratePackageOnBuild>
   </PropertyGroup>
 
+  <ItemGroup Condition="!$(TargetFramework.StartsWith('netstandard'))">
+    <PackageReference Include="InheritDoc" Version="[2.0.0]">
+      <ExcludeAssets>all</ExcludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <Target
+    Name="InheritDoc"
+    AfterTargets="CopyFilesToOutputDirectory"
+    Condition="'$(_DocumentationFileProduced)'=='true'">
+    <Exec
+      Command="$(NuGetPackageRoot)inheritdoc\2.0.0\tools\InheritDoc.exe -o"
+      WorkingDirectory="$(OutDir)" />
+  </Target>
+
 </Project>
