Extract general assembly-info entries to shared file.

--- a/Sharp.Diagnostics.Logging/Sharp.Diagnostics.Logging.csproj
+++ b/Sharp.Diagnostics.Logging/Sharp.Diagnostics.Logging.csproj
@@ -28,6 +28,10 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Include="..\General.cs" Link="Properties\General.cs" />
+  </ItemGroup>
+
   <Import Project="..\InheritDoc.targets" />
 
 </Project>
