--- a/Sharp.Diagnostics.Logging.Sql/Sharp.Diagnostics.Logging.Sql.csproj
+++ b/Sharp.Diagnostics.Logging.Sql/Sharp.Diagnostics.Logging.Sql.csproj
@@ -28,6 +28,14 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
+  <ItemGroup Condition="!$(TargetFramework.StartsWith('netstandard'))">
+    <Reference Include="System.Configuration"/>
+  </ItemGroup>
+
+  <ItemGroup Condition="$(TargetFramework.StartsWith('netstandard'))">
+    <PackageReference Include="System.Data.SqlClient" Version="[4.6.1,5.0.0)" />
+  </ItemGroup>
+  
   <ItemGroup>
     <Compile Include="..\General.cs" Link="Properties\General.cs" />
   </ItemGroup>
