--- a/Sharp.Diagnostics.Logging.Sql/Sharp.Diagnostics.Logging.Sql.csproj
+++ b/Sharp.Diagnostics.Logging.Sql/Sharp.Diagnostics.Logging.Sql.csproj
@@ -37,6 +37,10 @@
   </ItemGroup>
   
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <Compile Include="..\General.cs" Link="Properties\General.cs" />
   </ItemGroup>
 
