--- a/Sharp.Diagnostics.Logging.Sql/Sharp.Diagnostics.Logging.Sql.csproj
+++ b/Sharp.Diagnostics.Logging.Sql/Sharp.Diagnostics.Logging.Sql.csproj
@@ -38,6 +38,7 @@
   
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Sharp.Disposable" Version="1.0.0" />
   </ItemGroup>
   
   <ItemGroup>
