Be more specific in MSBuild conditions.

--- a/Sharp.Diagnostics.Logging.Sql/Sharp.Diagnostics.Logging.Sql.csproj
+++ b/Sharp.Diagnostics.Logging.Sql/Sharp.Diagnostics.Logging.Sql.csproj
@@ -24,15 +24,15 @@
     <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
-  <ItemGroup Condition="!$(TargetFramework.StartsWith('netstandard'))">
+  <ItemGroup Condition="'$(TargetFramework)' == 'net46'">
     <Reference Include="System.Configuration" />
   </ItemGroup>
 
-  <ItemGroup Condition="$(TargetFramework.StartsWith('netstandard'))">
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="System.Data.SqlClient" Version="[4.6.1,5.0.0)" />
   </ItemGroup>
   
