--- a/Sharp.Diagnostics.Logging.Sql/Sharp.Diagnostics.Logging.Sql.csproj
+++ b/Sharp.Diagnostics.Logging.Sql/Sharp.Diagnostics.Logging.Sql.csproj
@@ -27,6 +27,11 @@
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Sharp.Disposable" Version="1.0.0" />
+  </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net46'">
     <Reference Include="System.Configuration" />
@@ -34,11 +39,8 @@
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="System.Data.SqlClient" Version="[4.6.1,5.0.0)" />
-  </ItemGroup>
-  
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="Sharp.Disposable" Version="1.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="[2.0.0,3.0.0)" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="[2.0.0,3.0.0)" />
   </ItemGroup>
   
   <ItemGroup>
