--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,29 @@
-# Build Products
+# Copyright 2022 Jeffrey Sharp
+#
+# Permission to use, copy, modify, and distribute this software for any
+# purpose with or without fee is hereby granted, provided that the above
+# copyright notice and this permission notice appear in all copies.
+#
+# THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
+# WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
+# MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
+# ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
+# WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
+# ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
+# OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
+
+# Build products
 obj/
 bin/
 /dist/
 /coverage/
+/Stamp.props
 
 # Visual Studio
 .vs/
 *.user
 
-# Local Files
-/Local.props
-
-# Temporary Files
+# Temporary files
 *.log
 *.old
 *.tmp
@@ -21,9 +33,9 @@ bin/
 *.patch
 *.rej
 
-# Windows Junk
+# Windows junk
 Thumbs.db
 Desktop.ini
 
-# OS X Junk
+# macOS junk
 .DS_Store
