--- a/Sharp.Diagnostics.Logging/Sharp.Diagnostics.Logging.csproj
+++ b/Sharp.Diagnostics.Logging/Sharp.Diagnostics.Logging.csproj
@@ -17,7 +17,7 @@
   -->
 
   <PropertyGroup>
-    <Description>Micro-framework for logging via the .NET TraceSource API</Description>
+    <Description>Micro-framework for logging with the .NET TraceSource API</Description>
     <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
   </PropertyGroup>
 
