Relax System.Diagnostics.DiagnosticSource version requirement
This is done primarily to avoid maintenance events in this code.  The
library in question tends to change major versions without changes that
break this project.

--- a/Sharp.Diagnostics.Logging/Sharp.Diagnostics.Logging.csproj
+++ b/Sharp.Diagnostics.Logging/Sharp.Diagnostics.Logging.csproj
@@ -22,7 +22,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="[6.0.0,7.0.0)" />
+    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
