Add .NET 6.0 as a test target.

--- a/Sharp.Diagnostics.Logging.Tests/Sharp.Diagnostics.Logging.Tests.csproj
+++ b/Sharp.Diagnostics.Logging.Tests/Sharp.Diagnostics.Logging.Tests.csproj
@@ -18,7 +18,7 @@
 
   <PropertyGroup>
     <Description>Tests for Sharp.Diagnostics.Logging</Description>
-    <TargetFrameworks>net48;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net48;netcoreapp3.1;net6.0</TargetFrameworks>
     <RootNamespace>Sharp.Diagnostics.Logging</RootNamespace>
   </PropertyGroup>
 
