--- a/Sharp.Diagnostics.Logging/Sharp.Diagnostics.Logging.csproj
+++ b/Sharp.Diagnostics.Logging/Sharp.Diagnostics.Logging.csproj
@@ -19,6 +19,7 @@
   <PropertyGroup>
     <Description>Micro-framework for logging with the .NET TraceSource API</Description>
     <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
