--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -56,6 +56,7 @@
   <!-- Packaging properties -->
   <PropertyGroup>
     <PackageOutputPath>..\dist\</PackageOutputPath>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
